Version 1.4.2
    * not yet released
    * don't limit speed of loading animation in tabbar
    * fixed saving cursive font in fonts preferences
    * fixed translating edit actions in page context menu
    * fixed connecting to older secured servers by forcing older SSL protocol
    * fixed installing bash completions to correct folder
    * fixed deleting lockfile upon closing application
    * mac: correctly refreshing state of menus
    * mac: added dock menu with basic actions

Version 1.4.1
    * released 15 March 2013
    * fixed websearchbar not respecting select all on click settings
    * fixed certificates from custom path disappearing on saving preferences
    * fixed showing empty back/forward history menu upon restoring session
    * fixed duplicating current url in history when restoring session
    * fixed instantly showing popup when clicking on back/forward button

Version 1.4.0
    * released 11 March 2013
    * highlighting host in address in locationbar
    * can now be compiled using Qt 5
    * QtWebKit 2.3 new features - caret browsing, animated scrolling
    * added support for FTP listing files and downloading
    * added support for saving passwords of multiple users per site
    * added support for showing tabs on top
    * added bash autocompletion file
    * added more actions to super menu, also show menu inside window
    * possibility to select text on page with Shift+Arrow keys
    * asking user whether to allow site to use notifications/geolocation
    * option to set JavaScript privacy permissions
    * option to specify default search engine used in locationbar
    * option to disable search suggestions in websearchbar
    * option to search only whole words in source viewer
    * option to hide reload/stop buttons in navigationbar
    * option to disable alt/ctrl + numbers shortcuts
    * option to switch to tab from locationbar popup completer
    * option to set where to store network cache