@@ -6,6 +6,7 @@ Version 1.4.2
     * fixed connecting to older secured servers by forcing older SSL protocol
     * fixed installing bash completions to correct folder
     * fixed deleting lockfile upon closing application
+    * fixed crash in akn plugin while closing tab with labels shown
     * mac: correctly refreshing state of menus
     * mac: added dock menu with basic actions
 
